# cutsmith-timeline-bridge

./: .gitignore  CHANGELOG.md  CutSmith Timeline Bridge — Product Messaging : Legal Boundary : UI Copy General Rules.md  README.md  README.zh-CN.md  pyproject.toml
cutsmith/: __init__.py  __main__.py  bridge.py
cutsmith/collector/: __init__.py  filetype.py
cutsmith/detect/: __init__.py  probe.py
cutsmith/gui/: __init__.py  __main__.py  app.py  main_window.py  models.py  style.py
cutsmith/inspect/: __init__.py  probe.py  schema.py
cutsmith/ir/: __init__.py
cutsmith/reader/: __init__.py  jianying_pro.py
cutsmith/report/: __init__.py  compatibility.py
cutsmith/resolver/: __init__.py  media.py
cutsmith/scanner/: __init__.py  classify.py  manifest.py
cutsmith/subtitle/: __init__.py
cutsmith/writer/: __init__.py  fcp7_xml.py
docs/: creator_beta.md  creator_validation_checklist.md  gui_bridge_plan.md  gui_prototype_bridge.html  gui_prototype_bridge_v2.html  known_limitations.md  supported_features_matrix.md
docs/architecture/: v0.2_asset_scan_collect.md
docs/dev_log/: 2026-05-16.md  2026-05-19.md
docs/notes/: modern_jianying_75_storage.md
examples/: demo.py
exports/0519V2_speed_fix/: 0519V2.report.md  0519V2.xml
exports/0519V3/: 0519V3-4-3.report.md  0519V3-4-3.xml
exports/0519V3_speed_fix/: 0519V3-4-3.xml
mnt/data/: cutsmith_subtitle_studio_ui.html
out_collect/0416/: 0416.report.md  (+5 more)
scripts/: ir_diag.py
tests/: test_collector.py  test_filetype.py  test_gui_models.py  test_inspect.py  test_pipeline.py  test_scanner.py  test_subtitle.py
(+54 files in other folders)
