[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cutsmith"
version = "0.1.0"
description = "Bridge CapCut/JianyingPro timelines into Premiere Pro (FCP7 XML)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CutSmith" }]
keywords = ["capcut", "jianying", "premiere", "fcp7", "fcpxml", "video editing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = []

[project.scripts]
cutsmith = "cutsmith.__main__:main"

[tool.setuptools.packages.find]
include = ["cutsmith*"]
exclude = ["tests*", "examples*"]
